Fix up script to work standalone and without VPC

--- a/cloudformation.template
+++ b/cloudformation.template
@@ -42,7 +42,7 @@
                 "Path"                     : "/",
                 "Policies"                 : [
                     {
-                        "PolicyName" : "policy-SaltAdminPolicy",
+                        "PolicyName" : "policySaltAdminPolicy",
                         "PolicyDocument" : {
                             "Statement" : [
                                 {
